# Computer-Science-2021

./: .gitignore  README  README.md
current/Python/arch_setup_kde/: README.md
current/Python/creative-website/: pyproject.toml
current/Python/creative-website/app/: app.py  tempCodeRunnerFile.py
current/Python/creative-website/app/static/: main.css
current/Python/creative-website/app/templates/: index.html
current/Python/escape_room/: README.md  games.py  main.py  pyproject.toml  setup.py
current/Python/headlines/v3/: app.py
current/Python/headlines/v4/templates/: home.html
current/Python/headlines/v5/static/: main.css
current/Python/on-this-day-site/app/: app.py
current/Python/portfolio/: README.md  pyproject.toml
current/Python/simulate/: README.md  pyproject.toml  simulate_main.py  simulate_modified.py  simulate_original.py
current/Python/squirrel_game/: squirrel_game_modified.py
current/Shell/arch_setup/: README.md
current/Shell/arch_setup_kde/: README.md  main.sh
current/arch_setup/: README  setup.sh
current/escape_room/: README
current/simulate/: simulate_modified.py  simulate_original.py
current/slidiing_puzzle/: slidepuzzle.py
old/Python/crime_map/: pyproject.toml
old/Python/crime_map/src/: app.py  db_helper.py  db_init.py
old/Python/crime_map/src/static/: main.css
old/Python/crime_map/src/templates/: home.html
old/Python/escape_room/: games.py
old/Python/headlines/: .gitignore  pyproject.toml
old/Python/headlines/v1/: app.py
old/Python/headlines/v2/: app.py
old/Python/headlines/v2/templates/: news.html
old/Python/headlines/v4/: app.py
old/Python/headlines/v5/: app.py
old/Python/headlines/v5/templates/: home.html
old/Python/memory_game/: memory_game.py  memory_game_scored.py  pyproject.toml
old/Python/on-this-day-site/app/static/: main.css
old/Python/on-this-day-site/app/templates/: index.html
old/Python/on_this_day_site/: pyproject.toml
old/Python/on_this_day_site/app/: app.py
old/Python/password_checker/: README.md  passcheck.py  pyproject.toml
old/Python/planner/: README.md  legacy.py  newer.py  pyproject.toml
old/Python/rps/: rpsls-with-storage.py
old/Python/rpsls_gui/: pyproject.toml
old/Python/simulate/: simulate_main.py  simulate_modified.py
old/Python/slidiing_puzzle/: pyproject.toml  slidepuzzle.py
old/Python/sliding_puzzle/: slidepuzzle.py
old/Python/squirrel_game/: pyproject.toml  squirrel_game_modified.py  squirrel_game_original.py
old/memory_game/: memory_game.py  memory_game_scored.py
old/password_checker/: passcheck.py
old/planner/: README  README.md  legacy.py
old/rps/: rps.py
old/rpsls_gui/: main.py  rpsls.py
old/slidiing_puzzle/: slidepuzzle.py
