[tool.poetry]
name = "crime-map"
version = "0.1.0"
description = ""
authors = ["Conor Scheidt <conelul@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
loguru = "^0.6.0"
dateparser = "^1.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
