[tool.poetry]
name = "squirrel_game"
version = "0.1.0"
description = ""
authors = ["Conor Scheidt <conelul@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
